# community

./: .editorconfig  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
api/autenticacion/: index.html
doc/: components-diagram.puml  components-with-gateway (alternative to current diagram).puml  components.puml  conceptual-model.puml  dynamic-technologies-diagram.puml  infraestructure-services.puml  main-packages-and-libraries.puml  static-technologies-diagram.puml
docs/: index.md
req-tec/: requerimientos-tecnicos-api-sitmun.md
req-tec/img/: .$cliente-sitmun-3.drawio.dtmp  cliente-sitmun-3 2.drawio  cliente-sitmun-3.drawio
search/: search_index.json
