[tool.poetry]
name = "sitmun-doc"
version = "0.1.0"
description = ""
authors = ["Francisco J Lopez-Pellicer <fjlopez@unizar.es>"]

[tool.poetry.dependencies]
python = "~3.11"
mkdocs-material = "~9.1.3"
pymdown-extensions = "~9.10"
mkdocs-render-swagger-plugin = "~0.0.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"